--- a/views/depart.xml
+++ b/views/depart.xml
@@ -1,41 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>   
-    <record id="bureau_ordre_action_form" model="ir.actions.act_window">
-        <field name="name">Bureau ordre</field>
+    <record id="bureau_ordre_depart_action_form" model="ir.actions.act_window">
+        <field name="name">Registre de Départ</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">bureau.ordre.document.depart</field>
         <field name="view_mode">tree,form</field>
     </record>
 
-    <menuitem id="ordre_main_menu"
-            name="Bureau ordre"/>
+    <menuitem id="ordre_main_menu" name="Bureau ordre"/>
     
     <menuitem id="bureau_ordre_depart_menu"
             name="Registre Depart"
             parent="ordre_main_menu"
-            action="bureau_ordre_action_form"/>
+            action="bureau_ordre_depart_action_form"/>
 
     <record id="bureau_ordre_depart_view_form" model="ir.ui.view">
-        <field name="name">bureau ordre registre Form</field>
+        <field name="name">Registre Depart Form</field>
         <field name="model">bureau.ordre.document.depart</field>
         <field name="arch" type="xml">
-            <form> 
-                    <group>
-                        
-                    </group>
-                </form>
+            <form>
+                <group>
+                    <!-- Champ "num_depart" -->
+                    <field name="num_depart"/>
+                    
+                    <!-- Champ "date_depart" -->
+                    <field name="date_depart"/>
+                    
+                    <!-- Champ "destinataire" -->
+                    <field name="destinataire"/>
+                    
+                    <!-- Champ "objet_de_correspondance" -->
+                    <field name="objet_de_correspondance"/>
+                    
+                    <!-- Champ "piece_jointe" -->
+                    <field name="piece_jointe"/>
+                    
+                    <!-- Champ "expéditeur" -->
+                    <field name="expéditeur"/>
+                    
+                    <!-- Champ "reponse" en tant que checkbox -->
+                    <field name="reponse" widget="boolean_checkbox"/>
+                    
+                    <!-- Champ "reference_destinataire" conditionnellement désactivé -->
+                    <field name="reference_destinataire" attrs="{'readonly': [('reponse', '=', False)]}"/>
+                </group>
+            </form>
         </field>
     </record>
-    <!--Tree(list) View-->
+    <!-- Tree (list) View -->
     <record id="bureau_ordre_depart_view_list" model="ir.ui.view">
         <field name="name">bureau ordre registre list</field>
         <field name="model">bureau.ordre.document.depart</field>
         <field name="arch" type="xml">
             <tree>
-                  
+                <field name="num_depart"/>
+                <field name="date_depart"/>
+                <field name="destinataire"/>
+                <field name="objet_de_correspondance"/>
+                <field name="piece_jointe"/>
+                <field name="expéditeur"/>
+                <field name="reponse"/>
+                <field name="reference_destinataire"/>
             </tree>
         </field>
     </record>
-    
 </odoo>
-
