--- a/views/depart.xml
+++ b/views/depart.xml
@@ -9,13 +9,19 @@
     </record>
 
     <!-- Main Menu -->
-    <menuitem id="ordre_main_menu" name="Bureau ordre"/>
+    <menuitem id="ordre_main_menu" name="Bureau ordre">
+        <!-- Submenu -->
+        <menuitem id="bureau_ordre_registre_menu"
+                name="Registre">
+            <menuitem id="bureau_ordre_depart_menu"
+                    name="Registre Départ"
+                    action="bureau_ordre_depart_action_form"/>
+            <menuitem id="bureau_ordre_menu"
+            name="Registre Arrivée"
+            action="bureau_ordre_action_form"/>
+        </menuitem>
+    </menuitem>
 
-    <!-- Submenu -->
-    <menuitem id="bureau_ordre_depart_menu"
-            name="Registre Depart"
-            parent="ordre_main_menu"
-            action="bureau_ordre_depart_action_form"/>
 
     <!-- Form View -->
     <record id="bureau_ordre_depart_view_form" model="ir.ui.view">
