--- a/views/depart.xml
+++ b/views/depart.xml
@@ -23,40 +23,52 @@
         <field name="model">bureau.ordre.document.depart</field>
         <field name="arch" type="xml">
             <form>
+                <header>
+                    <button name="action_en_traitment" string="passer au traitement" type="object" attrs="{'invisible': [('etat', '!=', 'recu')]}"/>
+                    <button name="action_finish" string="terminer" type="object" attrs="{'invisible': [('etat', '!=', 'en_cours')]}"/>
+                    <button name="action_modifier" string="modifier" type="object"  attrs="{'invisible': [('etat', '!=', 'termine')]}"/>
+                    <button string="Archive" type="object" name="action_custom_archive" attrs="{'invisible': [('etat', '!=', 'termine')]}"/>
+                    <field name="etat" widget="statusbar" nolabel="1" />
+                </header>
                 <sheet>
                     <group>
                         <!-- Field "num_depart" -->
-                        <field name="num_depart"/>
+                        <field name="num_depart" readonly="1"/>
                     </group>
                     <group>
                         <!-- Field "date_depart" -->
-                        <field name="date_depart"/>
+                        <field name="date_depart" attrs="{'readonly': [('etat', '=', 'termine')]}"/>
                     </group>
 
                     <group>
                         <!-- Field "destinataire" -->
-                        <field name="destinataire"/>
+                        <field name="destinataire" attrs="{'readonly': [('etat', '=', 'termine')]}"/>
                     </group>
                     <group>
                         <!-- Field "objet_de_correspondance" -->
-                        <field name="objet_de_correspondance"/>
+                        <field name="objet_de_correspondance" attrs="{'readonly': [('etat', '=', 'termine')]}"/>
                     </group>
                     <group>  
                         <!-- Field "piece_jointe" -->
-                        <field name="piece_jointe"/>
+                        <field name="piece_jointe" attrs="{'readonly': [('etat', '=', 'termine')]}"/>
                     </group>
                     <group>
                         <!-- Field "expéditeur" -->
-                        <field name="expéditeur"/>
+                        <field name="expediteur" attrs="{'readonly': [('etat', '=', 'termine')]}"/>
                     </group>
                     <group>
                         <!-- Field "reponse" as a checkbox -->
-                        <field name="reponse" widget="boolean_checkbox"/>
+                        <field name="reponse" widget="boolean_checkbox" attrs="{'readonly': [('etat', '=', 'termine')]}"/>
                     </group>
                     <group>
                         <!-- Field "reference_destinataire" conditionally disabled -->
                         <field name="reference_destinataire" attrs="{'required': [('reponse', '=', True)], 'invisible': [('reponse', '=', False)]}"/>
-                        
+                    </group>
+                    <!-- better to make it invisible if terminer -->
+                    <group>
+                        <!-- <field name="pdf_file" attrs="{'readonly': [('etat', '=', 'termine')]}"/> -->
+                        <field name="pdf_file" attrs="{'required': [('etat', '=', 'en_cours')], 'readonly': [('etat', '=', 'termine')], 'invisible': [('etat', '=', 'recu')]}" />
+
                     </group>
                 </sheet>
             </form>
@@ -68,15 +80,23 @@
         <field name="name">bureau ordre registre list</field>
         <field name="model">bureau.ordre.document.depart</field>
         <field name="arch" type="xml">
-            <tree>
+            <tree decoration-success="etat=='termine'" decoration-info="etat=='recu'" decoration-warning="etat=='en_cours'" delete="0">
                 <field name="num_depart"/>
                 <field name="date_depart"/>
                 <field name="destinataire"/>
                 <field name="objet_de_correspondance"/>
                 <field name="piece_jointe"/>
-                <field name="expéditeur"/>
+                <field name="expediteur"/>
                 <field name="reponse"/>
                 <field name="reference_destinataire"/>
+                <field name="etat"
+                        decoration-success="etat=='termine'"
+                        decoration-info="etat=='recu'"
+                        decoration-warning="etat=='en_cours'"
+                        widget="badge"
+                        optional="show"
+                        />
+                <field name="pdf_file" filename="your_filename.pdf" widget="pdf" options="{'readonly': True}" attrs="{'invisible': [('etat', '!=', 'en_cours'),('etat', '!=', 'termine')]}"/>
             </tree>
         </field>
     </record>
@@ -91,14 +111,15 @@
                 <field name="destinataire" string="Destinataire"/>
                 <field name="objet_de_correspondance" string="Objet de correspondance"/>
                 <field name="piece_jointe" string="Nombre de pièces jointes"/>
-                <field name="expéditeur" string="Expéditeur"/>
+                <field name="expediteur" string="Expéditeur"/>
                 <field name="reponse" string="Réponse"/>
                 <field name="reference_destinataire" string="Référence du destinataire"/>
 
-                <!-- <filter string="state recu" name="filter_state_recu" domain="[('etat', '=', 'recu')]"/>
+                
+                <filter string="state recu" name="filter_state_recu" domain="[('etat', '=', 'recu')]"/>
                 <filter string="state en cours" name="filter_state_en_cours" domain="[('etat', '=', 'en_cours')]"/>
-                <filter string="state terminé" name="filter_termine" domain="[('etat', '=', 'termine')]"/> -->
-
+                <filter string="state terminé" name="filter_termine" domain="[('etat', '=', 'termine')]"/>
+                <filter string="Archived" name="archived" domain="[('etat','=','aarchived')]"/>
                 <group expand="0" string="Group By">
                     <filter string="Date de départ" name="date_depart" context="{'group_by': 'date_depart'}"/>
                     <filter string="Destinataire" name="destinataire" context="{'group_by': 'destinataire'}"/>
